<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
							android:orientation="vertical"
							android:layout_width="match_parent"
							android:layout_height="match_parent">

	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:text="@string/HintPass"
			android:id="@+id/tvPassLama"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true"
			android:layout_marginTop="10dip"
			android:layout_marginLeft="15dip"
			android:layout_marginRight="15dip"/>

	<EditText
			android:layout_width="match_parent"
			android:layout_height="48dip"
			android:inputType="number"
			android:ems="10"
			android:id="@+id/etPassLama"
			android:layout_below="@id/tvPassLama"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true"
			android:background="@drawable/rectroundgray"
			android:layout_marginTop="8dip"
			android:paddingLeft="12dp"
			android:paddingRight="12dp"
			android:maxLength="6"
			android:singleLine="true"
			android:password="true"
			android:layout_marginLeft="15dip"
			android:layout_marginRight="15dip"/>

	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:text="@string/HintInputPass"
			android:id="@+id/tvPassBaru"
			android:layout_alignParentLeft="true"
			android:layout_below="@id/etPassLama"
			android:layout_alignParentStart="true"
			android:layout_marginTop="8dip"
			android:layout_marginLeft="15dip"
			android:layout_marginRight="15dip"/>

	<EditText
			android:layout_width="match_parent"
			android:layout_height="48dip"
			android:inputType="number"
			android:ems="10"
			android:id="@+id/etPassBaru"
			android:layout_below="@id/tvPassBaru"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true"
			android:background="@drawable/rectroundgray"
			android:layout_marginTop="8dip"
			android:paddingLeft="12dp"
			android:paddingRight="12dp"
			android:maxLength="6"
			android:singleLine="true"
			android:password="true"
			android:layout_marginLeft="15dip"
			android:layout_marginRight="15dip"/>

	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:text="@string/HintVerPass"
			android:id="@+id/tvKonfirPass"
			android:layout_below="@id/etPassBaru"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true"
			android:layout_marginTop="8dip"
			android:layout_marginLeft="15dip"
			android:layout_marginRight="15dip"/>

	<EditText
			android:layout_width="match_parent"
			android:layout_height="48dip"
			android:inputType="number"
			android:ems="10"
			android:id="@+id/etKonfirPass"
			android:layout_below="@id/tvKonfirPass"
			android:layout_alignParentLeft="true"
			android:background="@drawable/rectroundgray"
			android:layout_alignParentStart="true"
			android:layout_marginTop="8dip"
			android:paddingLeft="12dp"
			android:paddingRight="12dp"
			android:maxLength="6"
			android:singleLine="true"
			android:password="true"
			android:layout_marginLeft="15dip"
			android:layout_marginRight="15dip"/>

	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/llRTRWKpos"
			android:layout_below="@id/etKonfirPass"
			android:orientation="horizontal"
			android:weightSum="8"
			android:layout_marginTop="10dip"
			android:layout_marginLeft="65dip"
			android:layout_marginRight="65dip"
			android:layout_marginBottom="15dip">

		<Button
				android:ems="10"
				android:layout_width="match_parent"
				android:layout_height="36dp"
				android:text="@string/strBtnRubah"
				android:id="@+id/btnGantiPass"
				android:layout_centerHorizontal="true"
				android:background="@drawable/rectroundorange"
				android:layout_marginRight="7dip"
				android:layout_marginTop="10dip"
				android:textSize="16dp"
				android:layout_weight="4"
				android:textColor="@color/White"/>

		<Button
				android:ems="10"
				android:layout_width="match_parent"
				android:layout_height="36dp"
				android:text="@string/strBtnBatal"
				android:id="@+id/btnBatalPass"
				android:layout_centerHorizontal="true"
				android:background="@drawable/rectroundorange"
				android:layout_marginLeft="7dip"
				android:layout_marginTop="10dip"
				android:textSize="16dp"
				android:layout_weight="4"
				android:textColor="@color/White"/>
	</LinearLayout>
</RelativeLayout>